kubernetes/02-frontend-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: frontend
  template:
    metadata:
      labels:
        app: frontend
    spec:
      containers:
      - name: modelmanager-frontend
        image: richardjoseph1/modelmanager-frontend-kube-openwebui:23894492b2ef0223ed24b71a51a197c2aad7554b
        ports:
        - containerPort: 80
        resources:
          requests:
            cpu: "20m"
            memory: "128Mi"
          limits:
            cpu: "50m"
            memory: "256Mi"
        livenessProbe:
          tcpSocket:
            port: 80
          initialDelaySeconds: 15
          periodSeconds: 20
        readinessProbe:
          httpGet:
            path: /
            port: 80
          initialDelaySeconds: 5
          periodSeconds: 10
