kubernetes/03-frontend-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: modelmanager-ingress
  annotations:
    nginx.ingress.kubernetes.io/use-regex: "false"
spec:
  ingressClassName: nginx
  rules:
  - http:
      paths:
      # Rule 1: Frontend for Model Manager
      # Routes all /modelmanager/... traffic to the frontend service.
      # The NGINX in the frontend will handle serving the app AND proxying API calls.
      - path: /modelmanager
        pathType: Prefix
        backend:
          service:
            name: frontend
            port:
              number: 80
